chore: Enable compiler warnings and apply minor fixes (#2317)
* chore: enable Java compiler warnings for finally and fallthrough, and fix related warnings

* chore: enable Java compiler warnings for finally and fallthrough, and fix related warnings

* chore: enable Java compiler warnings for rawtypes, and fix some related warnings

* chore: enable Java compiler warnings for deprecation, and fix some related warnings

* chore: disable Java compiler warnings for rawtypes and deprecation until all warnings are fixed